# langgraph-temporal-demo

./: .dockerignore  .env.example  DEPLOYMENT.md  Makefile  README.md
demo-cloud/: langgraph-temporal-demo.yaml
docker/: backend.Dockerfile  frontend.Dockerfile  langgraph.Dockerfile  nginx-default.conf.template  temporal.Dockerfile  web-entrypoint.sh
projects/demo/: langgraph-temporal.yaml
python/: api.py  approve.py  db.py  prompts.py  pyproject.toml  starter.py
python-langgraph/: README.md  api.py  approve.py  db.py  prompts.py  pyproject.toml  starter.py
python-langgraph-temporal/: README.md  api.py  approve.py  config.py  prompts.py  pyproject.toml  starter.py
python-langgraph-temporal/graph/: agent.py
python-langgraph-temporal/models/: types.py
python-langgraph-temporal/tests/: test_api.py
python-langgraph-temporal/workflows/: agent.py
python-langgraph/graph/: agent.py
python-langgraph/models/: types.py
python-langgraph/tests/: test_approval.py
python/activities/: tools.py
python/models/: types.py
python/tests/: test_common.py
python/workflows/: agent.py
support-agent-common/: pyproject.toml
support-agent-common/src/support_agent_common/: __init__.py  conversations.py  database.py  prompts.py  types.py
web/: README.md  app.js
