[project]
name = "support-agent"
version = "0.1.0"
description = "Durable agentic ReAct loop on Temporal — Python"
requires-python = ">=3.11"
dependencies = [
    "support-agent-common",
    "temporalio>=1.14",
    "anthropic>=0.69",
    "openai>=1.60",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
]

[tool.uv.sources]
support-agent-common = { path = "../support-agent-common", editable = true }
